<resources>
    <string name="app_name">Team</string>
    <string name="enter_your_id">Enter your Employee ID</string>
    <string name="enter_your_password">Password</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">DOB</string>
    <string name="save">Save</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_employees">Employees</string>
    <string name="menu_projects">Projects</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_short_name">Kripa U</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="phone">Phone number</string>
    <string name="email">Email ID</string>
    <string name="id">Employee ID</string>
    <string name="designation">Designation</string>
    <string name="choose_type">Choose user type</string>
    <string name="register">Register</string>
    <string name="change">Change details</string>

    <string name="project">Project ID</string>
    <string name="project_title">Title</string>
    <string name="project_title_head">Project title</string>
    <string name="task">Task ID</string>
    <string name="task_title">Task title</string>
    <string name="sub_task">Sub task ID</string>
    <string name="sub_task_title">Sub task title</string>
    <string name="client">Client details</string>
    <string name="type">Project type</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="assigned">Assigned to</string>
    <string name="choose_employee">Choose the employee</string>
    <string name="assisted_by">Assisted by</string>
    <string name="start_date">Start date</string>
    <string name="deadline">Deadline</string>
    <string name="due_date">Due date</string>
    <string name="start">Start:</string>
    <string name="due">Due:</string>
    <string name="status">Status:</string>
    <string name="type_of_project">Type of project:</string>
    <string name="choose_status">Choose status</string>
    <string name="notes">Notes</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete project</string>
    <string name="edit">Edit</string>
</resources>