<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.fragments.employees.AddEmployeesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:background="@drawable/rounded_edittext">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:background="@drawable/rounded_edittext">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="4"
                        android:id="@+id/rg">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:id="@+id/gender"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/male"
                            android:layout_weight="1"
                            android:checked="true"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:id="@+id/female"
                            android:layout_weight="1" />
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/others"
                            android:id="@+id/others"
                            android:layout_weight="1" />
                    </RadioGroup>
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/designation"
                    android:hint="@string/designation"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:background="@drawable/rounded_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true"
                    android:background="@drawable/rounded_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:background="@drawable/rounded_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_edittext">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/choose_type"
                        android:gravity="fill"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/type"
                        android:layout_weight="2">
                    </Spinner>
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id"
                    android:hint="@string/id"
                    android:inputType="textCapCharacters"
                    android:background="@drawable/rounded_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:background="@drawable/rounded_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/buttonshape"
                android:text="@string/register"
                android:textAllCaps="false" />
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="center"
                android:layout_width="57dp"
                android:layout_height="63dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

</ScrollView>