<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.fragments.projects.AddProjectsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_margin="5dp"-->
<!--            app:boxStrokeWidth="0dp"-->
<!--            app:boxStrokeWidthFocused="0dp">-->
<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/id"-->
<!--                android:hint="@string/project"-->
<!--                android:inputType="textCapCharacters"-->
<!--                android:background="@drawable/rounded_edittext"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:hint="@string/project_title"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/client"
                android:hint="@string/client"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type"
                android:hint="@string/type"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:background="@drawable/rounded_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:id="@+id/rg">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priority"
                        android:id="@+id/priority"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/high"
                        android:id="@+id/high"
                        android:layout_weight="1"
                        android:checked="true"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:id="@+id/medium"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/low"
                        android:id="@+id/low"
                        android:layout_weight="1" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/assigned"
                android:text="@string/assigned"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/choose_employee"
                    android:gravity="fill"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/employees"
                    android:layout_weight="2">
                </Spinner>
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/assisted_by"
                    android:gravity="fill"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/asst_by"
                    android:layout_weight="2">
                </Spinner>
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@drawable/rounded_edittext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deadline"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@drawable/rounded_edittext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:id="@+id/dueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/due_date"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@drawable/rounded_edittext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/choose_status"
                    android:gravity="fill"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/status"
                    android:layout_weight="2">
                </Spinner>
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notes"
                android:hint="@string/notes"
                android:background="@drawable/rounded_edittext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/buttonshape"
            android:text="@string/register"
            android:textAllCaps="false" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:layout_width="57dp"
            android:layout_height="63dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</ScrollView>