<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="#F7F8FA"
    android:id="@+id/sub_task_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/sub_task_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/purple_200"
                android:gravity="center"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit"
                android:id="@+id/edit">
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priority"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/red" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/date"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/start"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:text="01/02/2022"
        android:textColor="#570E0E"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/due_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/due"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/due"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:text="01/02/2022"
        android:textColor="#570E0E"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notes"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notes"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edittext">
            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="18sp"
                android:gravity="right"
                android:textColor="@color/gray" />
            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:textColor="#F44336" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>